--- a/attack_web/attacks/templates/attacks/login.html
+++ b/attack_web/attacks/templates/attacks/login.html
@@ -19,7 +19,9 @@
         /* 调整登录框样式 */
         .login-container {
             background-color: #fff;
-            padding: 20px;
+            width: 80%;
+            max-width: 400px;
+            padding: 5px;
             border-radius: 8px;
             box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
             display: flex;
@@ -59,9 +61,13 @@
             transition: background-color 0.3s ease;
         }
 
-        .login-button:hover, .register-button:hover {
+        .login-button:hover {
             background-color: #45a049;
         }
+        .register-button:hover {
+            background-color: #0879B9;
+        }
+
     </style>
 </head>
 <body>
