web - v4 美化登录和注册页面

--- a/attack_web/attacks/templates/attacks/index.html
+++ b/attack_web/attacks/templates/attacks/index.html
@@ -82,8 +82,10 @@
                 <option value="deepfool">DeepFool</option>
                 <option value="jsma">JSMA</option>
             </select><br><br>
-            <label for="image_file">选择图像：</label>
-            <input type="file" name="image_file" id="image_file"><br><br>
+            <div class="selection-img">
+                <label for="image_file">选择图像：</label>
+                <input type="file" name="image_file" id="image_file"><br><br>
+            </div>
             <input type="submit" value="发起攻击">
         </form>
 
