--- a/attack_web/attacks/templates/attacks/index.html
+++ b/attack_web/attacks/templates/attacks/index.html
@@ -4,16 +4,39 @@
     <meta charset="UTF-8">
     <title>选择攻击类型</title>
     {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
+            /*background-color: #f0f0f0;*/
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
             margin: 0;
             padding: 0;
+            height: 100vh;
+        }
+
+        /* 固定导航栏 */
+        nav.navbar {
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+            position: fixed;
+            border-bottom: 1px solid black;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* 确保导航栏位于其他内容之上 */
+        }
+
+        img {
+            margin-left: 40px;
+        }
+
+        main {
+            height: 100%;
+            margin: 0;
+            padding: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #f2f2f2;
+            flex-direction: column;
         }
 
         .container {
@@ -103,47 +126,60 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>选择攻击类型</h1>
-
-        {% if error_message %}
-            <p style="color: red;">{{ error_message }}</p>
-        {% endif %}
-
-        <form id="attack_form" action="/attack/" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <input type="hidden" name="ys_target" id="ys_target" value="">
-            <label for="attack_type">选择攻击类型：</label>
-            <select name="attack_type" id="attack_type" onchange="toggleTargetLabel()">
-                <option value="fgsm">FGSM</option>
-                <option value="pgd">PGD</option>
-                <option value="deepfool">DeepFool</option>
-                <option value="jsma">JSMA</option>
-            </select><br><br>
-            <div id="target_label_select" style="display: none;">
-                <label for="target_label">选择攻击成的标签：</label>
-                <select name="target_label" id="target_label">
-                    <!-- 这里的选项将由JavaScript动态填充 -->
-                </select>
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'attack.png' %}" alt="Logo" width="25" height="25" class="d-inline-block align-text-top">
+                    <span class="text-attack">对抗攻击系统</span>
+                </a>
             </div>
-            <div class="selection-img">
-                <div class="choose">
-                    <label for="image_file">选择图像：</label>
-                    <button type="button" onclick="document.getElementById('image_file').click()">选择文件</button>
-                    <input type="file" name="image_file" id="image_file" style="display: none;" onchange="previewImage(event)">
-                </div>
-                <div class="image-preview-container">
-                    <img id="image_preview" src="{% static '1.jpg' %}" alt="Image Preview">
-                </div>
-            </div>
-            <input type="submit" value="发起攻击" onclick="submitForm()">
-        </form>
+        </nav>
+    </header>
 
-        <form action="/logout/" method="post">
-            {% csrf_token %}
-            <input type="submit" value="登出">
-        </form>
-    </div>
+    <main>
+        <div class="container">
+            <h1>选择攻击类型</h1>
+
+            {% if error_message %}
+                <p style="color: red;">{{ error_message }}</p>
+            {% endif %}
+
+            <form id="attack_form" action="/attack/" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" name="ys_target" id="ys_target" value="">
+                <label for="attack_type">选择攻击类型：</label>
+                <select name="attack_type" id="attack_type" onchange="toggleTargetLabel()">
+                    <option value="fgsm">FGSM</option>
+                    <option value="pgd">PGD</option>
+                    <option value="deepfool">DeepFool</option>
+                    <option value="jsma">JSMA</option>
+                </select><br><br>
+                <div id="target_label_select" style="display: none;">
+                    <label for="target_label">选择攻击成的标签：</label>
+                    <select name="target_label" id="target_label">
+                        <!-- 这里的选项将由JavaScript动态填充 -->
+                    </select>
+                </div>
+                <div class="selection-img">
+                    <div class="choose">
+                        <label for="image_file">选择图像：</label>
+                        <button type="button" onclick="document.getElementById('image_file').click()">选择文件</button>
+                        <input type="file" name="image_file" id="image_file" style="display: none;" onchange="previewImage(event)">
+                    </div>
+                    <div class="image-preview-container">
+                        <img id="image_preview" src="{% static '1.jpg' %}" alt="Image Preview">
+                    </div>
+                </div>
+                <input type="submit" value="发起攻击" onclick="submitForm()">
+            </form>
+
+            <form action="/logout/" method="post">
+                {% csrf_token %}
+                <input type="submit" value="登出">
+            </form>
+        </div>
+    </main>
 
     <script>
         function previewImage(event) {
