--- a/attack_web/attacks/templates/attacks/login.html
+++ b/attack_web/attacks/templates/attacks/login.html
@@ -3,17 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
+    {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         /* 调整页面布局 */
         body {
             font-family: Arial, sans-serif;
+            /*background-color: #f0f0f0;*/
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
             margin: 0;
             padding: 0;
+            height: 100vh;
+        }
+
+        /* 固定导航栏 */
+        nav.navbar {
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+            position: fixed;
+            border-bottom: 1px solid black;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* 确保导航栏位于其他内容之上 */
+        }
+
+        img {
+            margin-left: 40px;
+        }
+
+        main {
+            height: 100%;
+            margin: 0;
+            padding: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background-color: #f2f2f2;
+            flex-direction: column;
+        }
+
+        .text-attack {
+            padding-left: 30px;
+
         }
 
         /* 调整登录框样式 */
@@ -30,9 +59,26 @@
         }
 
         /* 调整输入框和标签样式 */
-        label, input[type="text"], input[type="password"] {
+        input[type="text"], input[type="password"] {
+            margin-top: 2px;
+            width: 100%;
+        }
+
+        label {
+            margin-bottom: 2px;
             margin-top: 10px;
             width: 100%;
+        }
+
+        .text-intro {
+            align-self: flex-start;
+            padding: 5px;
+            margin: 0px 100px;
+            margin-bottom: 150px;
+            width: 300px;
+            height: 200px;
+            position: absolute;
+            border: 1px solid black;
         }
 
         /* 调整按钮样式 */
@@ -46,6 +92,7 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+
         }
 
         /* 调整注册按钮样式 */
@@ -67,28 +114,51 @@
         .register-button:hover {
             background-color: #0879B9;
         }
+        .intro {
+            text-indent: 2em;
+        }
 
     </style>
 </head>
 <body>
-    <div class="login-container">
-        <h1>登录</h1>
-        <!-- 显示错误信息 -->
-        {% if error_message %}
-            <p>{{ error_message }}</p>
-        {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <label for="username">用户名：</label>
-            <input type="text" id="username" name="username" required><br>
-            <label for="password">密码：</label>
-            <input type="password" id="password" name="password" required><br>
-            <!-- 登录按钮和注册按钮 -->
-            <div style="display: flex; justify-content: space-between; width: 100%;">
-                <input type="submit" class="login-button" value="登录">
-                <button class="register-button" onclick="window.location.href='{% url 'register' %}'">注册</button>
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'attack.png' %}" alt="Logo" width="25" height="25" class="d-inline-block align-text-top">
+                    <span class="text-attack">对抗攻击系统</span>
+                </a>
             </div>
-        </form>
-    </div>
+        </nav>
+    </header>
+
+
+    <main>
+<!--        <div class="text-intro">-->
+<!--            <p class="intro" >对抗攻击系统基于高效的对抗攻击算法实现，比如FGSM、PGD、DeepFool等算法，能在短时间内生成符合参数设置的图像。<br></p>-->
+<!--            <p class="intro" >这些算法通过微小的扰动来欺骗深度学习模型，使其产生错误的输出。</p>-->
+<!--        </div>-->
+        <div class="login-container">
+            <h1>登录</h1>
+            <!-- 显示错误信息 -->
+            {% if error_message %}
+                <p>{{ error_message }}</p>
+            {% endif %}
+            <form method="post">
+                {% csrf_token %}
+                <label for="username">用户名：</label>
+                <input type="text" id="username" name="username" required><br>
+                <label for="password">密码：</label>
+                <input type="password" id="password" name="password" required><br>
+                <!-- 登录按钮和注册按钮 -->
+                <div style="display: flex; justify-content: space-between; width: 100%;">
+                    <input type="submit" class="login-button" value="登录">
+                    <button class="register-button" onclick="window.location.href='{% url 'register' %}'">注册</button>
+                </div>
+            </form>
+        </div>
+    </main>
+
+
 </body>
 </html>
