--- a/attack_web/attacks/templates/attacks/register.html
+++ b/attack_web/attacks/templates/attacks/register.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>注册</title>
+    {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
+            /*background-color: #f0f0f0;*/
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             height: 100vh;
-            background-color: #f2f2f2;
+        }
+        /* 固定导航栏 */
+        nav.navbar {
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+            position: fixed;
+            border-bottom: 1px solid black;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* 确保导航栏位于其他内容之上 */
         }
 
         .container {
@@ -27,32 +36,39 @@
             align-items: center;
         }
 
-        h1 {
-            margin-bottom: 20px;
-        }
-
-        p {
-            color: red;
-        }
-
-        form {
+        main {
+            height: 100%;
+            margin: 0;
+            padding: 10px;
             display: flex;
+            justify-content: center;
+            align-items: center;
             flex-direction: column;
         }
 
+        img {
+            margin-left: 40px;
+        }
+
+        .text-attack {
+            padding-left: 15px;
+        }
+
         label {
+            margin-bottom: 2px;
             margin-top: 10px;
             width: 100%;
         }
 
         input[type="text"],
         input[type="password"] {
-            margin-top: 10px;
+            margin-top: 2px;
             width: 100%;
         }
 
         input[type="submit"] {
             margin-top: 20px;
+            margin-left: 30px;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
@@ -64,6 +80,7 @@
 
         input[type="button"] {
             margin-top: 20px;
+            margin-right: 30px;
             padding: 10px 20px;
             background-color: #008CBA;
             color: white;
@@ -97,22 +114,37 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>注册</h1>
-        {% if error_message %}
-            <p>{{ error_message }}</p>
-        {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <label for="username">用户名:</label>
-            <input type="text" id="username" name="username">
-            <label for="password">密码:</label>
-            <input type="password" id="password" name="password">
-            <div style="display: flex; justify-content: space-between; width: 100%;">
-                <input class="register-button" type="submit" value="注册">
-                <input type="button" class="cancel-button" value="取消注册" onclick="window.location.href='{% url 'return_to_login' %}'">
+
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#" >
+                    <img src="{% static 'attack.png' %}" alt="Logo" width="25" height="25" class="d-inline-block align-text-top">
+                    <span class="text-attack">对抗攻击系统</span>
+                </a>
             </div>
-        </form>
-    </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container">
+            <h1>注册</h1>
+            {% if error_message %}
+                <p>{{ error_message }}</p>
+            {% endif %}
+            <form method="post">
+                {% csrf_token %}
+                <label for="username">用户名:</label>
+                <input type="text" id="username" name="username" required><br>
+                <label for="password">密码:</label>
+                <input type="password" id="password" name="password" required><br>
+                <div style="display: flex; justify-content: space-between; width: 100%;">
+                    <input class="register-button" type="submit" value="注册">
+                    <input type="button" class="cancel-button" value="取消注册" onclick="window.location.href='{% url 'return_to_login' %}'">
+                </div>
+            </form>
+        </div>
+    </main>
+
 </body>
 </html>
