--- a/attack_web/attacks/templates/attacks/result.html
+++ b/attack_web/attacks/templates/attacks/result.html
@@ -2,35 +2,69 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>攻击结果</title>
+    {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
             font-family: Arial, sans-serif;
+            /*background-color: #f0f0f0;*/
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
             margin: 0;
             padding: 0;
+            height: 100vh;
+        }
+
+        /* 固定导航栏 */
+        nav.navbar {
+            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+            position: fixed;
+            border-bottom: 1px solid black;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* 确保导航栏位于其他内容之上 */
+        }
+
+        img {
+            margin-left: 40px;
+        }
+
+        main {
+            height: 100%;
+            margin: 0;
+            padding: 10px;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
-            background-color: #f2f2f2;
+            flex-direction: column;
         }
 
         .container {
+            background-color: #fff;
             width: 80%;
-            max-width: 800px;
+            width: 900px;
+            padding: 5px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             text-align: center;
-            margin-bottom: 20px; /* 为了按钮不贴在底部 */
+            margin-top: 500px;
+            margin-bottom: 400px;
         }
 
         h1 {
+            margin-top: 20px;
             margin-bottom: 20px;
         }
 
-        h2 {
-            margin-top: 40px;
+
+
+        .img-container {
+            display: flex;
+            align-items: center;
         }
 
         .image-container {
@@ -54,7 +88,7 @@
         }
 
         .prediction-info p {
-            margin: 0 10px;
+            margin: 0 40px;
         }
 
         .button-container {
@@ -64,7 +98,13 @@
             margin-top: 20px;
         }
 
+        #returnButton, #saveImageButton {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
         button {
+            margin: 10px 0;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
@@ -85,45 +125,60 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>攻击后原始图像和对抗图像对比</h1>
-        {% if result %}
 
-            <div class="image-container">
-                <h2>原始图像:</h2>
-                <img src="data:image/png;base64,{{ result.original_image }}" alt="原始图像">
+    <header>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="{% static 'attack.png' %}" alt="Logo" width="25" height="25" class="d-inline-block align-text-top">
+                    <span class="text-attack">对抗攻击系统</span>
+                </a>
             </div>
+        </nav>
+    </header>
 
-            {% if result.adversarial_image %}
+    <main>
+        <div class="container">
+            <h1>攻击后原始图像和对抗图像对比</h1>
+            {% if result %}
+                <div class="img-container">
+                    <div class="image-container">
+                        <h5>原始图像:</h5>
+                        <img src="data:image/png;base64,{{ result.original_image }}" alt="原始图像">
+                    </div>
 
-                <div class="image-container">
-                    <h2>对抗图像:</h2>
-                    <img src="data:image/png;base64,{{ result.adversarial_image }}" alt="对抗图像">
+                    {% if result.adversarial_image %}
+
+                    <div class="image-container">
+                        <h5>对抗图像:</h5>
+                        <img src="data:image/png;base64,{{ result.adversarial_image }}" alt="对抗图像">
+                    </div>
+                </div>
+
+                <div class="prediction-info">
+                    <p>原始预测：{{ result.original_label }}</p>
+                    <p>攻击后预测：{{ result.attacked_label }}</p>
                 </div>
 
                 <!-- 保存对抗图像的按钮 -->
                 <button id="saveImageButton">保存对抗图像</button>
 
                 <!-- 返回按钮 -->
-                <button form="backToIndexForm" type="submit">返回首页</button>
+                <button id="returnButton" form="backToIndexForm" type="submit">返回首页</button>
 
+                {% endif %}
+
+                <!-- 返回按钮 -->
+                <form id="backToIndexForm" action="{% url 'index' %}" method="get" style="display: none;">
+                    <!-- 这里的 style="display: none;" 是为了在点击按钮时不显示表单 -->
+                    <input type="hidden">
+                </form>
+
+            {% else %}
+                <p>无结果可用。</p>
             {% endif %}
-
-            <div class="prediction-info">
-                <p>原始预测：{{ result.original_label }}</p>
-                <p>攻击后预测：{{ result.attacked_label }}</p>
-            </div>
-
-            <!-- 返回按钮 -->
-            <form id="backToIndexForm" action="{% url 'index' %}" method="get" style="display: none;">
-                <!-- 这里的 style="display: none;" 是为了在点击按钮时不显示表单 -->
-                <input type="hidden">
-            </form>
-
-        {% else %}
-            <p>无结果可用。</p>
-        {% endif %}
-    </div>
+        </div>
+    </main>
 
     <script>
         // JavaScript 代码，用于异步保存图像
