--- a/attack_web/attacks/templates/attacks/index.html
+++ b/attack_web/attacks/templates/attacks/index.html
@@ -4,29 +4,52 @@
     <meta charset="UTF-8">
     <title>选择攻击类型</title>
     {% load static %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe Script', cursive;
             /*background-color: #f0f0f0;*/
-            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+            background-image: url("{% static '2.jpg' %}");
+            background-size: cover;
+            background-position: center;
             margin: 0;
             padding: 0;
-            height: 100vh;
+            height: 90vh;
         }
 
         /* 固定导航栏 */
-        nav.navbar {
-            background-image: linear-gradient(to right, #7391d4, #7695d8, #7a99db, #7d9edf, #81a2e2, #79aceb, #71b5f2, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-            position: fixed;
-            border-bottom: 1px solid black;
-            top: 0;
+        .nav {
+            height: 60px;
             width: 100%;
-            z-index: 1000; /* 确保导航栏位于其他内容之上 */
+            border-bottom: 1px solid black;
+            display: flex;
+            justify-self: flex-start;
+            align-self: flex-start;
+        }
+        .navbar-nav {
+            display: inline-block; /* 设置导航栏列表项为inline-block元素 */
+            list-style: none;
+            height: 60px; /* 设置列表项高度为60px */
+            line-height: 60px;
+            padding: 0 90px; /* 设置列表项左右内边距为40px */
         }
 
-        img {
-            margin-left: 40px;
+
+        /* 导航栏链接样式 */
+        .nav-link {
+            color: #000; /* 设置链接颜色为黑色 */
+            text-decoration: none; /* 去掉链接下划线 */
+        }
+
+        .attack-img {
+            width: 40px;
+            height: 40px;
+            margin: -10px;
+        }
+
+        .text-attack {
+            padding-left: 30px;
+            font-size: 30px;
+            margin-bottom: 20px;
         }
 
         main {
@@ -126,16 +149,18 @@
     </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="{% static 'attack.png' %}" alt="Logo" width="25" height="25" class="d-inline-block align-text-top">
+    <div class="nav">
+
+        <div class="navbar-nav">
+
+                <img src="{% static 'attack.png' %}" alt="Logo" class="attack-img">
+                <a class="nav-link" href="#">
                     <span class="text-attack">对抗攻击系统</span>
                 </a>
-            </div>
-        </nav>
-    </header>
+
+        </div>
+
+    </div>
 
     <main>
         <div class="container">
