--- a/attack_web/attacks/templates/attacks/index.html
+++ b/attack_web/attacks/templates/attacks/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>选择攻击类型</title>
     {% load static %}
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Segoe Script', cursive;
@@ -15,6 +16,8 @@
             padding: 0;
             height: 90vh;
         }
+
+        /*######################################*/
 
         /* 固定导航栏 */
         .nav {
@@ -51,6 +54,15 @@
             font-size: 30px;
             margin-bottom: 20px;
         }
+        /*#####################################*/
+
+        .rule {
+          margin: 2px 0 10px 0;
+          border: none;
+          height: 1px;
+          background-image: linear-gradient(to left, #f0f0f0, #c9bbae, #f0f0f0);
+        }
+
 
         main {
             height: 100%;
@@ -62,35 +74,48 @@
             flex-direction: column;
         }
 
-        .container {
-            width: 80%;
+        .index-container {
+            width: 600px;
             max-width: 600px;
-            background-color: #fff;
-            padding: 20px;
+            padding: 5px;
             border-radius: 8px;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
             text-align: center;
             display: flex;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
 
-        h1 {
-            margin-bottom: 20px;
+        #attack_form {
+            width: 600px;
+            max-width: 600px;
+            padding: 0px 25px 25px;
+            background-color: rgba(240, 240, 240, 0.8);
+            box-shadow:
+                0px 0px 0px 5px rgba( 255,255,255,0.4 ),
+                0px 4px 20px rgba( 0,0,0,0.33 );
+            -moz-border-radius: 5px;
+            -webkit-border-radius: 5px;
+            border-radius: 5px;
+            display: table;
+            position: static;
         }
 
-        label {
-            display: block;
-            margin-bottom: 10px;
+        #attack_form .index-header {
+            margin-bottom: 30px;
+        }
+
+        #attack_form .index-header h2 {
+            color: #333333;
+            font-size: 24px;
             font-weight: bold;
+            margin-bottom: 5px;
         }
 
-        select, input[type="file"], input[type="submit"] {
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            width: 100%;
-            box-sizing: border-box;
+        #attack_form .index-header p {
+            color: #8f8f8f;
+            font-size: 14px;
+            font-weight: 300;
         }
 
         .selection-img {
@@ -101,17 +126,128 @@
             margin-top: 10px;
         }
 
-        .choose {
-            margin-bottom: 20px;
+        label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
         }
 
-        .choose button {
+        #attack_type, #target_label {
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            width: 70%;
+            box-sizing: border-box;
+        }
+
+        input[type="file"] {
+            margin-bottom: 10px;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            cursor: pointer;
-            background-color: #f2f2f2;
+            width: 100%;
+            box-sizing: border-box;
         }
+
+        /*#################################################*/
+        .custom-btn {
+            width: 200px;
+            height: 40px;
+            color: #000;
+            border-radius: 5px;
+            padding: 10px 10px;
+            font-family: 'Lato', sans-serif;
+            font-weight: 500;
+            background: transparent;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+            display: inline-block;
+            box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+            7px 7px 20px 0px rgba(0,0,0,.1),
+            4px 4px 5px 0px rgba(0,0,0,.1);
+            outline: none;
+            text-align: center; /* 水平居中 */
+            line-height: 40px; /* 垂直居中 */
+        }
+
+        .btn-8 {
+            background-color: #f0ecfc;
+            background-image: linear-gradient(315deg, #f0ecfc 0%, #c797eb 74%);
+            line-height: 42px;
+            padding: 0;
+            border: none;
+        }
+        .btn-8 span {
+          position: relative;
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
+        .btn-8:before,
+        .btn-8:after {
+          position: absolute;
+          content: "";
+          right: 0;
+          bottom: 0;
+          background: #c797eb;
+          /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                      -4px -4px 6px 0 rgba(116, 125, 136, .2),
+            inset -4px -4px 6px 0 rgba(255,255,255,.5),
+            inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+          transition: all 0.3s ease;
+        }
+        .btn-8:before{
+           height: 0%;
+           width: 2px;
+        }
+        .btn-8:after {
+          width: 0%;
+          height: 2px;
+        }
+        .btn-8:hover:before {
+          height: 100%;
+        }
+        .btn-8:hover:after {
+          width: 100%;
+        }
+        .btn-8:hover{
+          background: transparent;
+        }
+        .btn-8 span:hover{
+          color: #c797eb;
+        }
+        .btn-8 span:before,
+        .btn-8 span:after {
+          position: absolute;
+          content: "";
+          left: 0;
+          top: 0;
+          background: #c797eb;
+          /*box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                      -4px -4px 6px 0 rgba(116, 125, 136, .2),
+            inset -4px -4px 6px 0 rgba(255,255,255,.5),
+            inset 4px 4px 6px 0 rgba(116, 125, 136, .3);*/
+          transition: all 0.3s ease;
+        }
+        .btn-8 span:before {
+          width: 2px;
+          height: 0%;
+        }
+        .btn-8 span:after {
+          height: 2px;
+          width: 0%;
+        }
+        .btn-8 span:hover:before {
+          height: 100%;
+        }
+        .btn-8 span:hover:after {
+          width: 100%;
+        }
+
+        /*############*/
+
 
         .image-preview-container {
             margin-left: 80px; /* 间距 */
@@ -126,24 +262,60 @@
 
 
 
-        input[type="submit"] {
-            margin-top: 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+        .attack-button {
+            margin-top: 20px;
+            margin-left: 25px;
+            background: #1188f5;
+            background: linear-gradient(#1188f5, #dee2e6);
+            border-radius: 10px;
+            width: 120px;
+            height: 36px;
+            color: #ffffff;
+            border: 1px solid white;
+            display: inline-block;
+            font: italic 16px/1 sans-serif;
+            text-align: center;
         }
 
-        input[type="submit"]:hover {
-            background-color: #45a049;
+
+        .return-button {
+            margin-top: 20px;
+            margin-right: 25px;
+            background: #1fe018;
+            background: linear-gradient(#1fe018, #d2dce5);
+            border-radius: 10px;
+            width: 120px;
+            height: 36px;
+            color: #ffffff;
+            border: 1px solid white;
+            display: inline-block;
+            font: italic 16px/1 sans-serif;
+            text-align: center;
+        }
+
+        .attack-button:hover {
+            background: linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+	        background-color: #378de5;
+        }
+
+        .attack-button:active {
+            position:relative;
+	        top:1px;
+        }
+        .return-button:hover {
+            background: linear-gradient(to bottom, #1fe018 5%, #61f032 100%);
+            background-color: #1fe018;
+        }
+        .return-button:active {
+            position:relative;
+	        top:1px;
         }
 
         input[type="file"] {
             padding: 5px;
         }
 
-        form:last-child {
+        form {
             margin-top: 10px;
         }
     </style>
@@ -163,46 +335,54 @@
     </div>
 
     <main>
-        <div class="container">
-            <h1>选择攻击类型</h1>
-
+        <div class="index-container">
             {% if error_message %}
                 <p style="color: red;">{{ error_message }}</p>
             {% endif %}
 
             <form id="attack_form" action="/attack/" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
+                <div  class="index-header">
+                    <h2>针对图像选择攻击算法</h2>
+                    <hr class="rule">
+                </div>
                 <input type="hidden" name="ys_target" id="ys_target" value="">
+
                 <label for="attack_type">选择攻击类型：</label>
-                <select name="attack_type" id="attack_type" onchange="toggleTargetLabel()">
-                    <option value="fgsm">FGSM</option>
-                    <option value="pgd">PGD</option>
-                    <option value="deepfool">DeepFool</option>
-                    <option value="jsma">JSMA</option>
-                </select><br><br>
+                <div>
+                    <select name="attack_type" id="attack_type" onchange="toggleTargetLabel()">
+                        <option value="" hidden>点击选择</option>
+                        <option value="fgsm">FGSM</option>
+                        <option value="pgd">PGD</option>
+                        <option value="deepfool">DeepFool</option>
+                        <option value="jsma">JSMA</option>
+                    </select>
+                </div>
+
                 <div id="target_label_select" style="display: none;">
                     <label for="target_label">选择攻击成的标签：</label>
                     <select name="target_label" id="target_label">
                         <!-- 这里的选项将由JavaScript动态填充 -->
                     </select>
                 </div>
+
+                <label id="choose-img">选择图像：</label>
                 <div class="selection-img">
                     <div class="choose">
-                        <label for="image_file">选择图像：</label>
-                        <button type="button" onclick="document.getElementById('image_file').click()">选择文件</button>
+                        <button class="custom-btn btn-8" type="button" onclick="document.getElementById('image_file').click()">点击这里选择所要攻击的文件</button>
                         <input type="file" name="image_file" id="image_file" style="display: none;" onchange="previewImage(event)">
                     </div>
                     <div class="image-preview-container">
-                        <img id="image_preview" src="{% static '1.jpg' %}" alt="Image Preview">
+                        <img id="image_preview" src="{% static '1.png' %}" alt="Image Preview">
                     </div>
                 </div>
-                <input type="submit" value="发起攻击" onclick="submitForm()">
+                <hr class="rule">
+                <div  style="display: flex; justify-content: space-around; width: 100%;">
+                    <input class="attack-button" type="submit" value="发起攻击" onclick="submitForm()">
+                    <button class="return-button" type="button" value="" onclick="returnToLogin(); return false;">登   出</button>
+                </div>
             </form>
 
-            <form action="/logout/" method="post">
-                {% csrf_token %}
-                <input type="submit" value="登出">
-            </form>
         </div>
     </main>
 
@@ -258,8 +438,10 @@
             document.getElementById("attack_form").submit();
         }
 
-
-
+        function returnToLogin() {
+            window.location.href = "{% url 'logout' %}";
+        }
     </script>
+
 </body>
 </html>
